# engineering-ai-agents

./: .gitignore  README.md  docker-compose-local.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose-local.yaml
.github/workflows/: check-collaborators.yml
artagents/: README.md  pyproject.toml
artagents/src/artagents/: __init__.py
assignments/: README.md
assignments/assignment1a/: Assignment_1a.ipynb  README.md
assignments/assignment1b/: README.md  SGD.ipynb  logistic.ipynb  test.ipynb
assignments/assignment2a/: integratedGradients.ipynb  keras.ipynb  test.ipynb
assignments/assignment2b/: EfficientAD.ipynb  Patchcore.ipynb
assignments/assignment2b/results/EfficientAd/MVTec/grid/: latest
assignments/assignment2b/results/EfficientAd/MVTec/leather/: latest
assignments/assignment2b/results/EfficientAd/MVTec/tile/: latest
assignments/assignment2b/results/Patchcore/gridtest/: latest
assignments/assignment2b/results/Patchcore/gridtest/v1/Patchcore/gridtest/latest/Patchcore/leathertest/: latest
assignments/assignment2b/results/Patchcore/gridtest/v1/Patchcore/gridtest/latest/Patchcore/leathertest/v0/Patchcore/leathertest/latest/Patchcore/leathertest/: latest
assignments/assignment2b/results/Patchcore/gridtest/v1/Patchcore/gridtest/latest/Patchcore/leathertest/v0/Patchcore/leathertest/latest/Patchcore/leathertest/v0/Patchcore/leathertest/: latest
assignments/assignment2b/results/Patchcore/leathertest/: latest
assignments/assignment2b/results/Patchcore/tiletest/: latest
assignments/assignment3/: FasterRCNN.ipynb
cli/: README.md  pyproject.toml
cli/src/cli/: __init__.py  __main__.py
docker/: Dockerfile.dev.gpu
docs/: _quarto.yml  index.qmd  intro.qmd  summary.qmd
project/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
project/.devcontainer/: devcontainer.json
project/llm_engineering/: settings.py
project/llm_engineering/model/finetuning/: finetune.py
project/pipelines/: digital_data_etl.py  end_to_end_data.py  evaluating.py  export_artifact_to_json.py  feature_engineering.py  generate_datasets.py  training.py
project/steps/etl/: crawl_links.py  get_or_create_user.py
project/steps/evaluating/: evaluate.py
project/steps/export/: serialize_artifact.py  to_json.py
project/steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
project/steps/generate_datasets/: create_prompts.py  generate_intruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
project/steps/training/: train.py
project/tools/: run.py
